# perusable

./: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  notes.md
client/: package-lock.json  package.json
client/cypress/: tsconfig.json
client/cypress/fixtures/: wine_search_words.json  wines.json
client/cypress/integration/: all.spec.js
client/src/: App.js
client/src/components/: Search.js
server/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
server/catalog/: admin.py  constants.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
server/catalog/fixtures/: test_wines.json
server/catalog/management/commands/: bulk_update.py  create_index.py  update_mapping.py
server/catalog/migrations/: 0001_initial.py  0002_wine_thumbnail.py  0003_install_trigram_ext.py  0004_wine_gin_idx.py  0005_auto_20220620_0520.py  0006_search_vector.py  0007_update_search_vector.py  0008_winesearchword.py  0009_update_wine_search_word.py
server/catalog/tests/: test_model.py  test_views.py
server/perusable/: settings.py  urls.py
