[tool.poetry]
name = "server"
version = "0.1.0"
description = "server-side"
authors = ["ajisamudra <ajisamudraa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.9"
django-filter = "21.1"
djangorestframework = "3.12.4"
elasticsearch-dsl = "7.4.0"
psycopg2-binary = "2.9.2"
Pillow = "^9.1.1"
django-debug-toolbar = "^3.4.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
